--- a/index.html
+++ b/index.html
@@ -68,12 +68,29 @@
         margin-right: 10px; /* Espacement entre l'icône et le texte */
     }
 
+    @media (max-width: 768px) {
+        .navbar-desktop {
+            display: none;
+        }
+        .navbar-toggler {
+            visibility: visible;
+        }
+    }
+
+    @media (min-width: 769px) {
+        .navbar-mobile {
+            display: none;
+        }
+        .navbar-toggler {
+            visibility: hidden;
+        }
+    }
 
 
 </style>
 <body>
 <!---- Barre de Navigation ----->
-<nav class="navbar navbar-dark bg-dark" aria-label="First navbar example">
+<nav class="navbar navbar-dark bg-dark navbar-desktop" aria-label="First navbar example">
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">Accueil</a>
         <div class="d-flex justify-content-end">
@@ -83,9 +100,29 @@
             <a class="btn btn-outline-light my-2 my-sm-0 mr-2" href="pages/utilisation.html" style="margin-left: 1em;">Comment sont elles utilisées</a>
             <a class="btn btn-outline-light my-2 my-sm-0 mr-2" href="pages/sources.html" style="margin-left: 1em;">Sources</a>
         </div>
-        <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation" style="visibility: hidden">
+        <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+    </div>
+</nav>
+
+<nav class="navbar navbar-dark bg-dark navbar-mobile" aria-label="First navbar example">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">Accueil</a>
+        <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    <div class="navbar-collapse collapse" id="navbarsExample01" style="">
+        <ul class="navbar-nav me-auto mb-2">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="pages/comment-sont-elles-gerees.html" style="margin-left: 1em;">Comment sont elles gérées</a>
+                <a class="nav-link active" aria-current="page" href="pages/cquoi.html" style="margin-left: 1em;">C'est quoi une donnée personnelle</a>
+                <a class="nav-link active" aria-current="page" href="pages/protection.html" style="margin-left: 1em;">Comment s'en protéger</a>
+                <a class="nav-link active" aria-current="page" href="pages/utilisation.html" style="margin-left: 1em;">Comment sont elles utilisées</a>
+                <a class="nav-link active" aria-current="page" href="pages/sources.html" style="margin-left: 1em;">Sources</a>
+            </li>
+        </ul>
+    </div>
     </div>
 </nav>
 
