--- a/pages/cquoi.html
+++ b/pages/cquoi.html
@@ -42,10 +42,44 @@
             margin-bottom: 40px;
         }
 
+        @media (max-width: 768px) {
+            .navbar-desktop {
+                display: none;
+            }
+            .navbar-toggler {
+                visibility: visible;
+            }
+
+            .mobile {
+                display: block;
+            }
+
+            .desktop {
+                display: none;
+            }
+        }
+
+        @media (min-width: 769px) {
+            .navbar-mobile {
+                display: none;
+            }
+            .navbar-toggler {
+                visibility: hidden;
+            }
+
+            .mobile {
+                display: none;
+            }
+
+            .desktop {
+                display: block;
+            }
+        }
+
     </style>
     <body>
         <!---- Barre de Navigation ----->
-        <nav class="navbar navbar-dark bg-dark" aria-label="First navbar example">
+        <nav class="navbar navbar-dark bg-dark navbar-desktop" aria-label="First navbar example">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">Accueil</a>
                 <div class="d-flex justify-content-end">
@@ -58,6 +92,27 @@
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation" style="visibility: hidden">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+            </div>
+        </nav>
+
+        <nav class="navbar navbar-dark bg-dark navbar-mobile" aria-label="First navbar example">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">Accueil</a>
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="navbar-collapse collapse" id="navbarsExample02" style="">
+                    <ul class="navbar-nav me-auto mb-2">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="comment-sont-elles-gerees.html" style="margin-left: 1em;">Comment sont elles gérées</a>
+                            <a class="nav-link active" aria-current="page" href="cquoi.html" style="margin-left: 1em;">C'est quoi une donnée personnelle</a>
+                            <a class="nav-link active" aria-current="page" href="protection.html" style="margin-left: 1em;">Comment s'en protéger</a>
+                            <a class="nav-link active" aria-current="page" href="utilisation.html" style="margin-left: 1em;">Comment sont elles utilisées</a>
+                            <a class="nav-link active" aria-current="page" href="sources.html" style="margin-left: 1em;">Sources</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
 
@@ -83,11 +138,12 @@
                             <p>
                                 La Commission nationale de l'informatique et des libertés (CNIL) définit une donnée personnelle comme toute information se rapportant à une personne physique identifiée ou identifiable. Une personne est considérée comme identifiable dès lors qu'elle peut être identifiée, directement ou indirectement, notamment par référence à un identifiant tel qu'un nom, un numéro d'identification, des données de localisation, un identifiant en ligne, ou à un ou plusieurs éléments spécifiques propres à son identité physique, physiologique, génétique, psychique, économique, culturelle ou sociale. Ainsi, toute donnée permettant d'identifier une personne, même de manière indirecte, est considérée comme une donnée personnelle et doit être traitée avec précaution conformément aux lois et réglementations en vigueur en matière de protection des données.
                             </p>
+                            <img src="../img/CNIL_logo_2016.svg" class="img-fluid rounded mobile" alt="Image" style="height: 98%;">
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <img src="../img/CNIL_logo_2016.svg" class="img-fluid rounded" alt="Image" style="height: 98%;">
+                    <img src="../img/CNIL_logo_2016.svg" class="img-fluid rounded desktop" alt="Image" style="height: 98%;">
                 </div>
             </div>
         </div>
