--- a/pages/utilisation.html
+++ b/pages/utilisation.html
@@ -50,10 +50,28 @@
             padding: 2em;
         }
 
+        @media (max-width: 768px) {
+            .navbar-desktop {
+                display: none;
+            }
+            .navbar-toggler {
+                visibility: visible;
+            }
+        }
+
+        @media (min-width: 769px) {
+            .navbar-mobile {
+                display: none;
+            }
+            .navbar-toggler {
+                visibility: hidden;
+            }
+        }
+
     </style>
     <body>
         <!---- Barre de Navigation ----->
-        <nav class="navbar navbar-dark bg-dark" aria-label="First navbar example">
+        <nav class="navbar navbar-dark bg-dark navbar-desktop" aria-label="First navbar example">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">Accueil</a>
                 <div class="d-flex justify-content-end">
@@ -66,6 +84,27 @@
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation" style="visibility: hidden">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+            </div>
+        </nav>
+
+        <nav class="navbar navbar-dark bg-dark navbar-mobile" aria-label="First navbar example">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">Accueil</a>
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="navbar-collapse collapse" id="navbarsExample02" style="">
+                    <ul class="navbar-nav me-auto mb-2">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="comment-sont-elles-gerees.html" style="margin-left: 1em;">Comment sont elles gérées</a>
+                            <a class="nav-link active" aria-current="page" href="cquoi.html" style="margin-left: 1em;">C'est quoi une donnée personnelle</a>
+                            <a class="nav-link active" aria-current="page" href="protection.html" style="margin-left: 1em;">Comment s'en protéger</a>
+                            <a class="nav-link active" aria-current="page" href="utilisation.html" style="margin-left: 1em;">Comment sont elles utilisées</a>
+                            <a class="nav-link active" aria-current="page" href="sources.html" style="margin-left: 1em;">Sources</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
 
