--- a/pages/sources.html
+++ b/pages/sources.html
@@ -6,6 +6,7 @@
 
     <link href="../css/bootstrap.css" rel="stylesheet">
     <script src="../js/bootstrap.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <title>Qu'est-ce qu'une donnée personnelle ?</title>
 </head>
