--- a/pages/sources.html
+++ b/pages/sources.html
@@ -58,9 +58,17 @@
         .desktop {
             display: none;
         }
+
+        .marg {
+            margin-left: 0;
+        }
     }
 
     @media (min-width: 769px) {
+        .marg {
+            margin-left: 30%;
+        }
+
         .navbar-mobile {
             display: none;
         }
@@ -130,11 +138,11 @@
 </section>
 
 <!---- Paragraphes ----->
-<center>
 
     <div class="row">
         <div class="col-md-12">
             <div class="card">
+                <div class="marg">
                 <div class="card-body">
                     <h5 class="card-title font-weight-bold">Tout comprendre sur la CNIL :</h5>
                     <ul class="list-unstyled">
@@ -149,12 +157,6 @@
                         <li class="nav-item"><a class="nav-link" href="https://www.cnil.fr/sites/cnil/files/2023-11/cnil_cnil_en_bref_2023.pdf">
                             <i class="fas fa-link"></i> CNIL en bref 2023 (PDF)</a></li>
                     </ul>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-12">
-            <div class="card">
-                <div class="card-body">
                     <h5 class="card-title font-weight-bold">Données personnelles :</h5>
                     <ul class="list-unstyled">
                         <li class="nav-item"><a class="nav-link" href="https://www.senat.fr/lc/lc62/lc623.html">
@@ -176,14 +178,6 @@
                         <li class="nav-item"><a class="nav-link" href="https://start.lesechos.fr/societe/culture-tendances/vendre-ses-donnees-personnelles-un-business-controverse-1273442">
                             <i class="fas fa-link"></i> Vendre ses données personnelles : Un business controversé</a></li>
                     </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="card">
-                <div class="card-body">
                     <h5 class="card-title font-weight-bold">Historique de protection des données personnelles :</h5>
                     <ul class="list-unstyled">
                         <li class="nav-item"><a class="nav-link" href="https://zestedesavoir.com/tutoriels/2529/le-rgpd-nouveau-droit-de-la-protection-des-donnees-personnelles/historique-et-application-des-lois-concernant-les-donnees-personnelles/">
@@ -195,12 +189,6 @@
                         <li class="nav-item"><a class="nav-link" href="https://www.lhistoire.fr/entretien/de-la-cnil-au-rgpd%C2%A0-40-ans-de-protection-des-donn%C3%A9es">
                             <i class="fas fa-link"></i> De la CNIL au RGPD : 40 ans de protection des données - L'Histoire</a></li>
                     </ul>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-12">
-            <div class="card">
-                <div class="card-body">
                     <h5 class="card-title font-weight-bold">Informations sur la sécurité numérique :</h5>
                     <ul class="list-unstyled">
                         <li class="nav-item"><a class="nav-link" href="https://ihedn.fr/formation/souverainete-numerique-et-cybersecurite/">
@@ -216,14 +204,6 @@
                         <li class="nav-item"><a class="nav-link" href="https://urbanattitude.fr/quelle-place-pour-la-surveillance-numerique-en-france/">
                             <i class="fas fa-link"></i> Quelle place pour la surveillance numérique en France? - Urban Attitude</a></li>
                     </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="card">
-                <div class="card-body">
                     <h5 class="card-title font-weight-bold">Spam :</h5>
                     <ul class="list-unstyled">
                         <li class="nav-item"><a class="nav-link" href="https://www.cnil.fr/fr/spam-phishing-arnaques-signaler-pour-agir">
@@ -233,14 +213,6 @@
                         <li class="nav-item"><a class="nav-link" href="https://www.cnil.fr/fr/phishing-detecter-un-message-malveillant">
                             <i class="fas fa-link"></i> Phishing : Détecter un message malveillant - CNIL</a></li>
                     </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="card">
-                <div class="card-body">
                     <h5 class="card-title font-weight-bold">Fuite de données/risques :</h5>
                     <ul class="list-unstyled">
                         <li class="nav-item"><a class="nav-link" href="https://www.latribune.fr/economie/france/france-travail-victime-d-une-cyberattaque-massive-43-millions-de-personnes-potentiellement-touchees-992869.html">
@@ -272,14 +244,6 @@
                         <li class="nav-item"><a class="nav-link" href="https://cybernews.com/security/">
                             <i class="fas fa-link"></i> Sécurité informatique - CyberNews</a></li>
                     </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="card">
-                <div class="card-body">
                     <h5 class="card-title font-weight-bold">Entre-deux :</h5>
                     <ul class="list-unstyled">
                         <li class="nav-item"><a class="nav-link" href="https://theconversation.com/l-internet-souverain-russe-face-au-covid-19-136705">
@@ -295,6 +259,7 @@
             </div>
         </div>
     </div>
-</center>
+</div>
+
 </body>
 </html>
