--- a/pages/comment-sont-elles-gerees.html
+++ b/pages/comment-sont-elles-gerees.html
@@ -153,7 +153,7 @@
                             <p id="inter">
                                 Les activités sur les réseaux sociaux, les recherches sur internet, les achats en ligne, les interactions avec des applications mobiles et des sites web génèrent une multitude de données personnelles telles que les préférences, les comportements de navigation, les coordonnées, etc.
                             </p>
-                            <img src="../img/pouloulou.jpg" class="img-fluid rounded mobile" alt="Image" style="height: 98%;">
+                            <img src="../img/pouloulou.jpg" class="img-fluid rounded mobile" alt="Image" style="width: 98%;">
                         </div>
                     </div>
                 </div>
@@ -174,7 +174,7 @@
                             <p id="con">
                                 Les smartphones, les montres intelligentes, les appareils domestiques connectés et autres gadgets IoT collectent souvent des données personnelles telles que la localisation géographique, les habitudes de sommeil, les niveaux d'activité, etc.
                             </p>
-                            <img src="../img/frigo.jpg" class="img-fluid rounded mobile" alt="Image" style="height: 98%;">
+                            <img src="../img/frigo.jpg" class="img-fluid rounded mobile" alt="Image" style="width: 98%;">
                         </div>
                     </div>
                 </div>
@@ -189,7 +189,7 @@
                             <p id="tr">
                                 Chaque fois qu'une transaction financière est effectuée, que ce soit par carte de crédit, virement bancaire ou paiement en ligne, des données personnelles telles que les détails de compte, les historiques d'achats et les informations de facturation sont générées.
                             </p>
-                            <img src="../img/cb_money_money.webp" class="img-fluid rounded mobile" alt="Image" style="height: 98%;">
+                            <img src="../img/cb_money_money.webp" class="img-fluid rounded mobile" alt="Image" style="width: 98%;">
                         </div>
                     </div>
                 </div>
@@ -211,7 +211,7 @@
                             <p id="sant">
                                 Les consultations médicales, les dossiers médicaux électroniques, les dispositifs de suivi de la condition physique et autres sources médicales génèrent des données personnelles sensibles relatives à la santé.
                             </p>
-                            <img src="../img/photo_de_merde.webp" class="img-fluid rounded mobile" alt="Image" style="height: 98%;">
+                            <img src="../img/photo_de_merde.webp" class="img-fluid rounded mobile" alt="Image" style="width: 98%;">
                         </div>
                     </div>
                 </div>
@@ -227,7 +227,7 @@
                             <p id="loc">
                                 Les appareils GPS, les applications de cartographie et même les réseaux Wi-Fi peuvent collecter des données de localisation qui peuvent être associées à une personne.
                             </p>
-                            <img src="../img/gps.jpg" class="img-fluid rounded mobile" alt="Image" style="height: 98%;">
+                            <img src="../img/gps.jpg" class="img-fluid rounded mobile" alt="Image" style="width: 98%;">
                         </div>
                     </div>
                 </div>
@@ -249,7 +249,7 @@
                             <p id="com">
                                 Les e-mails, les appels téléphoniques, les messages texte et d'autres formes de communication génèrent des métadonnées telles que l'heure et la durée des communications, ainsi que les personnes avec qui la communication est établie.
                             </p>
-                            <img src="../img/Email-marketing-interets-F.jpg" class="img-fluid rounded mobile" alt="Image" style="height: 98%;">
+                            <img src="../img/Email-marketing-interets-F.jpg" class="img-fluid rounded mobile" alt="Image" style="width: 98%;">
                         </div>
                     </div>
                 </div>
@@ -265,7 +265,7 @@
                             <p id="bio">
                                 Les empreintes digitales, les scans rétiniens, les visages scannés pour la reconnaissance faciale sont des exemples de données biométriques générées par les systèmes de sécurité et d'identification.
                             </p>
-                            <img src="../img/terrifiant.jpg" class="img-fluid rounded mobile" alt="Image" style="height: 98%;">
+                            <img src="../img/terrifiant.jpg" class="img-fluid rounded mobile" alt="Image" style="width: 98%;">
                         </div>
                     </div>
                 </div>
