--- a/pages/cquoi.html
+++ b/pages/cquoi.html
@@ -138,7 +138,7 @@
                             <p>
                                 La Commission nationale de l'informatique et des libertés (CNIL) définit une donnée personnelle comme toute information se rapportant à une personne physique identifiée ou identifiable. Une personne est considérée comme identifiable dès lors qu'elle peut être identifiée, directement ou indirectement, notamment par référence à un identifiant tel qu'un nom, un numéro d'identification, des données de localisation, un identifiant en ligne, ou à un ou plusieurs éléments spécifiques propres à son identité physique, physiologique, génétique, psychique, économique, culturelle ou sociale. Ainsi, toute donnée permettant d'identifier une personne, même de manière indirecte, est considérée comme une donnée personnelle et doit être traitée avec précaution conformément aux lois et réglementations en vigueur en matière de protection des données.
                             </p>
-                            <img src="../img/CNIL_logo_2016.svg" class="img-fluid rounded mobile" alt="Image" style="height: 98%;">
+                            <img src="../img/CNIL_logo_2016.svg" class="img-fluid rounded mobile" alt="Image" style="width: 98%;">
                         </div>
                     </div>
                 </div>
